--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>About</title>
+  <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
+  <title>Help page</title>
 </head>
 <body>
-  <h1>this is the about page from the public source</h1>
-  <img src="/img/emoji.png" alt="" srcset="">
+  <div class="main-content">
+    {{>header }}
+    <p>{{message}}</p>
+  </div>
+  {{>footer}}
 </body>
 </html>
