--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My first express app</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
 </head>
 <body>
-  <h1>From a static file</h1>
+  <div class="main-content">
+    {{>header }}
+    <p>Use this site to get your weather</p>
+  </div>
+  {{>footer}}
   <script src="/js/app.js"></script>
 </body>
 </html>
