--- a/templates/views/notFound.hbs
+++ b/templates/views/notFound.hbs
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Help page</title>
+  <link rel="shortcut icon" href="/img/weather.png" type="image/x-icon">
+  <title>Not found page</title>
 </head>
 <body>
-  <h1>help page from a static path</h1>
+  <div class="main-content">
+    {{>header }}
+    <p>{{message}}</p>
+  </div>
+
+  {{>footer}}
 </body>
 </html>
