--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
   <div class="main-content">
     {{>header }}
+    <p>This side was creater by Samuel Mata. It uses data from mapbox.com and weatherstack.com</p>
     <img class="portrait" src="/img/emoji.png" alt="" srcset="">
   </div>
   {{>footer}}
